--- a/Labsheet31March/Labsheet31March.csproj
+++ b/Labsheet31March/Labsheet31March.csproj
@@ -80,6 +80,15 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Migrations\202503310951448_InitialCreate.cs" />
+    <Compile Include="Migrations\202503310951448_InitialCreate.Designer.cs">
+      <DependentUpon>202503310951448_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202503311031522_AddRestaurantData.cs" />
+    <Compile Include="Migrations\202503311031522_AddRestaurantData.Designer.cs">
+      <DependentUpon>202503311031522_AddRestaurantData.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -93,6 +102,12 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <EmbeddedResource Include="Migrations\202503310951448_InitialCreate.resx">
+      <DependentUpon>202503310951448_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202503311031522_AddRestaurantData.resx">
+      <DependentUpon>202503311031522_AddRestaurantData.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
